# ai-resume-builder

./: README.md
api/: .env.example  pyproject.toml  resume_builder.db
api/src/: __init__.py  main.py
api/src/core/: config.py  database.py
api/src/generator/: __init__.py  router.py  schemas.py  service.py
api/src/llm/: prompts.py  schemas.py  service.py
api/src/matcher/: __init__.py  router.py  schemas.py  service.py
api/src/parser/: router.py  schemas.py  service.py
api/src/resume_builder_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/src/tracker/: __init__.py  models.py  router.py  schemas.py  service.py
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ApplicationCard.css  ApplicationCard.tsx  GeneratePanel.css  GeneratePanel.tsx  JDInput.css  JDInput.tsx  MatchScoreGauge.css  MatchScoreGauge.tsx  Navbar.css  Navbar.tsx  RecommendationCard.css  RecommendationCard.tsx  RecommendationList.css  RecommendationList.tsx  ResumeUploader.css  ResumeUploader.tsx  SettingsModal.css  SettingsModal.tsx  StepIndicator.css  StepIndicator.tsx  ThemeSwitcher.css  ThemeSwitcher.tsx
frontend/src/contexts/: LLMContext.tsx  ThemeContext.tsx
frontend/src/pages/: AnalyzerPage.css  AnalyzerPage.tsx  HomePage.css  HomePage.tsx  TrackerPage.css  TrackerPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
