[project]
name = "resume-builder-api"
version = "1.0.0"
description = "AI-powered resume builder backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy>=2.0.35",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
    "google-genai>=1.0.0",
    "openai>=1.50.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
